packages/cli/tests/autoload-config/error.config.ts
export default {
  format: "umd" // error
};
